<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/back"
        android:icon="@drawable/abc_vector_test"
        android:title="back"
        app:showAsAction="always" />
    <item
        android:id="@+id/cameraconversation"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/callconversation"
        android:icon="@android:drawable/stat_sys_phone_call"
        android:title="Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemConv1"
        android:title="@string/itemConv1" />
    <item
        android:id="@+id/itemConv2"
        android:title="@string/itemConv2" />
    <item
        android:id="@+id/itemConv3"
        android:title="@string/itemConv3" />
    <item
        android:id="@+id/itemConv4"
        android:title="@string/itemConv4" />
    <item
        android:id="@+id/itemConv5"
        android:title="@string/itemConv5" />
</menu>